# tg-toilet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  instant_view_template.txt
src/: api.rs  bot.rs  database.rs  main.rs
