[package]
name = "tg-toilet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
env_logger = "0.11.5"
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled"] }
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full", "rt", "tokio-macros"] }
