[package]
name = "tg-toilet"
version = "0.1.0"
edition = "2021"

[lints.clippy]
needless_return = "allow"

[dependencies]
anyhow = "1.0.88"
chrono = "0.4.38"
chrono-tz = "0.10.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
warp = "0.3.7"
